updated html and body image

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <script src="./js/script.js" defer></script>
   </head>
   <body data-theme="light">
+    <div id="header-img"></div>
     <header aria-labelledby="logo">
       <div class="container">
         <div class="app-header">
