--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <main>
       <div class="container">
         <div class="todo-box">
-          <ul class="todo-list"> 
+          <ul id="dragging-list" class="todo-list"> 
           </ul>
           <div class="todo-footer">
             <div class="items">
