--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="./images/icons8-todo-list-material-outlined-32.png" type="image/x-icon">
+    <link rel="icon"
+      type="image/png" href="./images/icons8-todo-list-material-outlined-32.png" >
     <title>Todo App</title>
     <link rel="stylesheet" href="sass/style.scss" />
     <script src="./js/script.js" defer></script>
