problem with sortable js fixed

--- a/src/index.html
+++ b/src/index.html
@@ -64,8 +64,8 @@
             </ul>
       </div>
     </main>
-<!--     <footer>
+    <footer>
       <p>Drag and drop to reorder list</p>
-    </footer> -->
+    </footer>
   </body>
 </html>
